--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
               <a href="https://www.instagram.com/alhidayah_cipari/" class="footer-link" style="font-size: 25px ;"><i class="fa-brands fa-instagram"></i></a>
             </li>
             <li class="list-inline-item">
-              <a href="" class="footer-link" style="font-size: 25px;"><i class="fa-brands fa-facebook"></i></a>
+              <a href="https://web.facebook.com/Alhidayah.knowledge" class="footer-link" style="font-size: 25px;"><i class="fa-brands fa-facebook"></i></a>
             </li>
             <li class="list-inline-item">
               <a href="" class="footer-link" style="font-size: 25px;"><i class="fa-brands fa-youtube"></i></a>
