--- a/Berita.html
+++ b/Berita.html
@@ -4,13 +4,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="ico/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
   <link rel="stylesheet" href="libraries/Bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="styles/main.css">
   <title>Berita|AL-HIDAYAH</title>
 </head>
 <body>
-    <!-- navbar -->
+  <!-- navbar -->
     <nav class="navbar navbar-expand-lg bg-light shadow-sm sticky-top rounded-bottom">
       <div class="container">
         <a class="navbar-brand fw-bold" href="#">
@@ -66,6 +67,8 @@
     </div>
   </div>
   <!-- end breadcrumb -->
+
+  <!-- content -->
   <div class="berita-pesantren pb-1">
     <div class="container">
       <div class="row mb-3 pt-3 justify-content-center">
@@ -80,7 +83,7 @@
             <div class="card-body">
               <h5 class="card-berita-title card-title">Title hear</h5>
               <p class="card-berita-caption card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, nobis odio!</p>
-              <a href="#" class="btn btn-primary">Read more.. </a>
+              <a href="/DetailBerita.html" class="btn btn-primary">Read more.. </a>
             </div>
           </div>
         </div>
@@ -151,6 +154,7 @@
       </nav>
     </div>
   </div>
+  <!-- end content -->
   
     <!-- footer -->
     <footer class="bg-dark text-white pt-5 pb-3">
@@ -193,7 +197,7 @@
               <a href="" class="footer-link" style="text-decoration: none;"><i class="fa-solid fa-envelope"></i> alhidayahpanongan@gmail.com</a>
             </p>
             <p>
-              <a href="" class="footer-link" style="text-decoration: none;"><i class="fa-solid fa-phone"></i> +62 8952749257</a>
+              <a href="https://api.whatsapp.com/send?phone=62895630388324" class="footer-link" style="text-decoration: none;"><i class="fa-solid fa-phone"></i> +62 895630388324</a>
             </p>
           </div>
         </div>
