--- a/contact.html
+++ b/contact.html
@@ -5,39 +5,47 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Al-HIDAYAH | Kontak</title>
+  <link rel="shortcut icon" href="ico/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
   <link rel="stylesheet" href="libraries/Bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
-  <!-- navbar -->
+<!-- navbar -->
   <nav class="navbar navbar-expand-lg bg-light shadow-sm sticky-top rounded-bottom">
     <div class="container">
-      <a class="navbar-brand fw-bold" href="/index.html">
+      <a class="navbar-brand fw-bold" href="#">
         <img src="images/logo.png" alt="Logo Al-Hidayah" width="50" height="50" >
         Al-HIDAYAH
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
+      <div class="collapse navbar-collapse fw-bold" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
             <a class="nav-link" aria-current="page" href="/">Home</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Administrasi</a>
-          </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Dropdown
+              Administrasi
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
+              <li><a class="dropdown-item" href="#">Berita</a></li>
+              <li><a class="dropdown-item" href="#">PPDB 2O23/2O24</a></li>
+            </ul>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Informasi
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="/Berita.html">Berita Pesantren</a></li>
+              <li><a class="dropdown-item" href="#">Agenda Pesantren</a></li>
+            </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="/contact.html">Kontak</a>
+            <a class="nav-link" href="/contact.html">Kontak</a>
           </li>
         </ul>
       </div>
@@ -120,7 +128,7 @@
           <a href="" class="footer-link" style="text-decoration: none;"><i class="fa-solid fa-envelope"></i> alhidayahpanongan@gmail.com</a>
         </p>
         <p>
-          <a href="" class="footer-link" style="text-decoration: none;"><i class="fa-solid fa-phone"></i> +62 8952749257</a>
+          <a href="https://api.whatsapp.com/send?phone=62895630388324" class="footer-link" style="text-decoration: none;"><i class="fa-solid fa-phone"></i> +62 895630388324</a>
         </p>
       </div>
     </div>
