--- a/DetailBerita.html
+++ b/DetailBerita.html
@@ -69,11 +69,73 @@
   <!-- end breadcrumb -->
 
   <!-- content -->
-  <div class="konten-berita">
+  <div class="konten-berita mt-4">
     <div class="container">
       <div class="row">
-        <div class="col-lg-8"></div>
-        <div class="col-lg-4"></div>
+        <div class="col-lg-8">
+          <div class="comtainer">
+            <div class="thumb-post">
+              <img src="images/wisuda.jpg" class="img-fluid" alt="">
+            </div>
+            <div class="body-konten mt-3">
+              <h2 class="title-body">WISUDA TAHUN PELAJARAN 2O22/2O23</h2>
+              <div class="article-konten mb-5 mt-3">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit officiis reiciendis eligendi a! Corrupti voluptate eum nam quod, cum qui aut commodi, vitae a sed dignissimos doloremque. Quia fuga dignissimos corrupti, mollitia voluptates facilis impedit nam! Accusantium, aspernatur iusto.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet voluptatibus atque velit sint itaque! Nobis commodi quaerat delectus a excepturi sit fuga autem, corporis odio provident nulla, aliquid quasi, sunt iure sapiente enim eos reprehenderit? Sed tempora, esse mollitia quisquam ratione, maiores commodi nobis impedit quod veritatis accusamus itaque.</p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit illum nemo excepturi a accusantium, corporis tenetur id veniam, nulla laboriosam vitae consequatur ipsa at fuga culpa facere? Minima unde harum ea hic quos provident quaerat voluptatum, quasi porro a! Exercitationem dolor earum sunt. Eaque, voluptatibus.</p>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. In magnam delectus et rerum repudiandae tempore quia accusamus minus quaerat unde porro laborum laboriosam, accusantium sit!</p>
+              </div>
+              <hr>
+              <!-- <div class="share-post">
+                <ul class="list-unstyled d-flex g-4">
+                  <li>Bagikan :</li>
+                  <li><a href=""><i class="fa-brands fa-facebook-f"></i></a></li>
+                </ul>
+              </div> -->
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <div class="side-konten">
+            <div class="container">
+              <div class="header-side">
+                <h3 class="mb-4 text-decoration-underline">Berita Lainnya</h3>
+              </div>
+              <div class="row-cols-1 body-side">
+                <div class="main-side card p-3 mb-3">
+                  <a href="" class="text-dark fw-semibold pb-3 text-decoration-none">Pendaftaran PPDB 2O23/2O24</a>
+                  <div class="timeline fw-light">
+                    <span><i class="far fa-clock"></i> 19 Juli 2021</span>
+                  </div>
+                </div>
+                <div class="main-side card p-3 mb-3">
+                  <a href="" class="text-dark fw-semibold pb-3 text-decoration-none">Pendaftaran PPDB 2O23/2O24</a>
+                  <div class="section-item-timeline-meta">
+                    <span><i class="far fa-clock"></i> 19 Juli 2021</span>
+                  </div>
+                </div>
+                <div class="main-side card p-3 mb-3">
+                  <a href="" class="text-dark fw-semibold pb-3 text-decoration-none">Pendaftaran PPDB 2O23/2O24</a>
+                  <div class="section-item-timeline-meta">
+                    <span><i class="far fa-clock"></i> 19 Juli 2021</span>
+                  </div>
+                </div>
+                <div class="main-side card p-3 mb-3">
+                  <a href="" class="text-dark fw-semibold pb-3 text-decoration-none">Pendaftaran PPDB 2O23/2O24</a>
+                  <div class="section-item-timeline-meta">
+                    <span><i class="far fa-clock"></i> 19 Juli 2021</span>
+                  </div>
+                </div>
+                <div class="main-side card p-3 mb-3">
+                  <a href="" class="text-dark fw-semibold pb-3 text-decoration-none">Pendaftaran PPDB 2O23/2O24</a>
+                  <div class="section-item-timeline-meta">
+                    <span><i class="far fa-clock"></i> 19 Juli 2021</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
@@ -82,7 +144,7 @@
 
 
   <!-- footer -->
-  <footer class="bg-dark text-white pt-5 pb-3">
+  <footer class="bg-dark text-white mt-5 pt-5 pb-3">
     <div class="container text-md-left">
       <div class="row text-md-left">
         <div class="col-lg-6 col-xl-3 mx-auto mt-3">
