--- a/DetailBerita.html
+++ b/DetailBerita.html
@@ -24,7 +24,7 @@
     <div class="collapse navbar-collapse fw-bold" id="navbarNav">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/">Home</a>
+          <a class="nav-link" aria-current="page" href="/">Home</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -36,7 +36,7 @@
           </ul>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Informasi
           </a>
           <ul class="dropdown-menu">
@@ -60,7 +60,8 @@
         <nav aria-label="breadcrumb">
           <ol class="breadcrumb">
             <li class="breadcrumb-item"><a style="text-decoration: none;" href="#">Informasi</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Berita</li>
+            <li class="breadcrumb-item"><a style="text-decoration: none;" href="#">Berita</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Pergantian Pengurus</li>
           </ol>
       </div>
       </nav>
@@ -72,13 +73,13 @@
   <div class="konten-berita mt-4">
     <div class="container">
       <div class="row">
-        <div class="col-lg-8">
+        <div class="col-lg-8 col-sm-12">
           <div class="comtainer">
-            <div class="thumb-post">
-              <img src="images/wisuda.jpg" class="img-fluid" alt="">
+            <div class="card text-bg-dark">
+              <img src="images/osis.jpg" class="card-img" alt="...">
             </div>
             <div class="body-konten mt-3">
-              <h2 class="title-body">WISUDA TAHUN PELAJARAN 2O22/2O23</h2>
+              <h2 class="title-body">PERGANTIAN PENGURUS</h2>
               <div class="article-konten mb-5 mt-3">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit officiis reiciendis eligendi a! Corrupti voluptate eum nam quod, cum qui aut commodi, vitae a sed dignissimos doloremque. Quia fuga dignissimos corrupti, mollitia voluptates facilis impedit nam! Accusantium, aspernatur iusto.</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet voluptatibus atque velit sint itaque! Nobis commodi quaerat delectus a excepturi sit fuga autem, corporis odio provident nulla, aliquid quasi, sunt iure sapiente enim eos reprehenderit? Sed tempora, esse mollitia quisquam ratione, maiores commodi nobis impedit quod veritatis accusamus itaque.</p>
