--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div class="container">
     <a class="navbar-brand fw-bold" href="#">
       <img src="images/logo.png" alt="Logo Al-Hidayah" width="50" height="50" >
-      Al-HIDAYAH
+      <span class="text-wrap" style="width: 3rem;">Al-HIDAYAH</span>
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -48,6 +48,13 @@
           <a class="nav-link" href="/contact.html">Kontak</a>
         </li>
       </ul>
+      <div class="d-flex">
+        <ul class="navbar-nav">
+          <li>
+            <a href="/login.html" class="btn btn-outline-primary ms-2">Login</a>
+          </li>
+        </ul>
+      </div>
     </div>
   </div>
 </nav>
