--- a/contact.html
+++ b/contact.html
@@ -1,163 +1,268 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Al-HIDAYAH | Kontak</title>
-  <link rel="shortcut icon" href="ico/favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
-  <link rel="stylesheet" href="libraries/Bootstrap/css/bootstrap.min.css">
-  <link rel="stylesheet" href="styles/main.css">
-</head>
-<body>
-<!-- navbar -->
-  <nav class="navbar navbar-expand-lg bg-light shadow-sm sticky-top rounded-bottom">
-    <div class="container">
-      <a class="navbar-brand fw-bold" href="#">
-        <img src="images/logo.png" alt="Logo Al-Hidayah" width="50" height="50" >
-        Al-HIDAYAH
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse fw-bold" id="navbarNav">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="/">Home</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Administrasi
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Berita</a></li>
-              <li><a class="dropdown-item" href="#">PPDB 2O23/2O24</a></li>
-            </ul>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Informasi
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="/Berita.html">Berita Pesantren</a></li>
-              <li><a class="dropdown-item" href="#">Agenda Pesantren</a></li>
-            </ul>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/contact.html">Kontak</a>
-          </li>
-        </ul>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Al-HIDAYAH | Kontak</title>
+    <link rel="shortcut icon" href="ico/favicon.ico" type="image/x-icon" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+    />
+    <link rel="stylesheet" href="libraries/Bootstrap/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="styles/main.css" />
+  </head>
+  <body>
+    <!-- navbar -->
+    <nav
+      class="navbar navbar-expand-lg bg-light shadow-sm sticky-top rounded-bottom"
+    >
+      <div class="container">
+        <a class="navbar-brand fw-bold" href="#">
+          <img
+            src="images/logo.png"
+            alt="Logo Al-Hidayah"
+            width="50"
+            height="50"
+          />
+          Al-HIDAYAH
+        </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse fw-bold" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="/">Home</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                Administrasi
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Berita</a></li>
+                <li><a class="dropdown-item" href="#">PPDB 2O23/2O24</a></li>
+              </ul>
+            </li>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                Informasi
+              </a>
+              <ul class="dropdown-menu">
+                <li>
+                  <a class="dropdown-item" href="/Berita.html"
+                    >Berita Pesantren</a
+                  >
+                </li>
+                <li><a class="dropdown-item" href="#">Agenda Pesantren</a></li>
+              </ul>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="/contact.html">Kontak</a>
+            </li>
+          </ul>
+        </div>
       </div>
-    </div>
-  </nav>
-<!-- end navbar -->
+    </nav>
+    <!-- end navbar -->
 
-<!-- form -->
-<div class="container pt-4 mb-5">
-  <div class="row">
-    <div class="col">
-      <div class="row text-center mb-4">
-        <h2>Contact us</h2>
-      </div>
-      <div class="row container justify-content-center">
-        <div class="card card-contact col-sm-12 col-md-7 col-lg-6 shadow">
-          <div class="row">
-            <form class="form-contact p-4">
-            <div class="mb-3">
-              <label for="nama " class="form-label-nama">Nama</label>
-              <input type="text" placeholder="your name" class="form-control" id="nama">
+    <!-- form -->
+    <div class="container pt-4 mb-5">
+      <div class="row">
+        <div class="col">
+          <div class="row text-center mb-4">
+            <h2>Contact us</h2>
+          </div>
+          <div class="row container justify-content-center">
+            <div class="card card-contact col-sm-12 col-md-7 col-lg-6 shadow">
+              <div class="row">
+                <form class="form-contact p-4">
+                  <div class="mb-3">
+                    <label for="nama " class="form-label-nama">Nama</label>
+                    <input
+                      type="text"
+                      placeholder="your name"
+                      class="form-control"
+                      id="nama"
+                    />
+                  </div>
+                  <div class="mb-3">
+                    <label for="exampleInputEmail1" class="form-label"
+                      >Email address</label
+                    >
+                    <input
+                      type="email"
+                      placeholder="youremail@gmail.com"
+                      class="form-control"
+                      id="exampleInputEmail1"
+                      aria-describedby="emailHelp"
+                    />
+                  </div>
+                  <div class="mb-3">
+                    <label for="exampleFormControlTextarea1" class="form-label"
+                      >Example textarea</label
+                    >
+                    <textarea
+                      class="form-control"
+                      placeholder="Saran / Kritikan / Pertanyaan"
+                      id="exampleFormControlTextarea1"
+                      rows="4"
+                    ></textarea>
+                  </div>
+                  <button type="submit" class="btn btn-primary">
+                    <i class="fa-solid fa-paper-plane"></i> Kirim
+                  </button>
+                </form>
+              </div>
             </div>
-            <div class="mb-3">
-              <label for="exampleInputEmail1" class="form-label">Email address</label>
-              <input type="email" placeholder="youremail@gmail.com" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-            </div>
-            <div class="mb-3">
-              <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
-              <textarea class="form-control" placeholder="Saran / Kritikan / Pertanyaan" id="exampleFormControlTextarea1" rows="4"></textarea>
-            </div>
-            <button type="submit" class="btn btn-primary"><i class="fa-solid fa-paper-plane"></i> Kirim</button>
-            </form>
           </div>
         </div>
       </div>
     </div>
-  </div>
-</div>
-<!-- end form -->
+    <!-- end form -->
 
+    <!-- footer -->
+    <footer class="bg-dark text-white pt-5 pb-3">
+      <div class="container text-md-left">
+        <div class="row text-md-left">
+          <div class="col-lg-6 col-xl-3 mx-auto mt-3">
+            <h5 class="mb-4 fw-bold text-primary">
+              <img
+                src="images/logo.png"
+                style="width: 49px; height: 49px"
+                alt=""
+              />
+              PONPES AL-HIDAYAH
+            </h5>
+            <p>
+              Lorem ipsum dolor sit amet consec tetur adipisicing elit.
+              Consectetur necessitatibus natus nisi earum maiores nulla.
+            </p>
+          </div>
+          <div class="col-lg-2 mx-auto mt-3">
+            <h5 class="text-uppercase mb-4 fw-bold text-primary">Contact us</h5>
+            <p>
+              <a
+                href=""
+                class="footer-link text-white"
+                style="text-decoration: none"
+                >home</a
+              >
+            </p>
+            <p>
+              <a
+                href=""
+                class="footer-link text-white"
+                style="text-decoration: none"
+                >Administrasi</a
+              >
+            </p>
+            <p>
+              <a
+                href=""
+                class="footer-link text-white"
+                style="text-decoration: none"
+                >Informasi</a
+              >
+            </p>
+            <p>
+              <a
+                href=""
+                class="footer-link text-white"
+                style="text-decoration: none"
+                >Galeri</a
+              >
+            </p>
+          </div>
+          <div class="col-lg-4 mx-auto mt-3">
+            <h5 class="text-uppercase mb-4 fw-bold text-primary">Contact</h5>
+            <p>
+              <a href="" class="footer-link" style="text-decoration: none"
+                ><i class="fa-solid fa-map-location-dot"></i> Ciakar, Panongan
+                Tangerang 1571O</a
+              >
+            </p>
+            <p>
+              <a href="" class="footer-link" style="text-decoration: none"
+                ><i class="fa-solid fa-envelope"></i>
+                alhidayahpanongan@gmail.com</a
+              >
+            </p>
+            <p>
+              <a
+                href="https://api.whatsapp.com/send?phone=62895630388324"
+                class="footer-link"
+                style="text-decoration: none"
+                ><i class="fa-solid fa-phone"></i> +62 895630388324</a
+              >
+            </p>
+          </div>
+        </div>
+        <hr class="mb-3" />
+        <div class="row text-white">
+          <div class="col-md-5 col-lg-7">
+            <ul class="list-unstyled list-inline">
+              <li class="list-inline-item">
+                <a
+                  href="https://www.instagram.com/alhidayah_cipari/"
+                  class="footer-link"
+                  style="font-size: 25px"
+                  ><i class="fa-brands fa-instagram"></i
+                ></a>
+              </li>
+              <li class="list-inline-item">
+                <a
+                  href="https://web.facebook.com/Alhidayah.knowledge"
+                  class="footer-link"
+                  style="font-size: 25px"
+                  ><i class="fa-brands fa-facebook"></i
+                ></a>
+              </li>
+              <li class="list-inline-item">
+                <a href="" class="footer-link" style="font-size: 25px"
+                  ><i class="fa-brands fa-youtube"></i
+                ></a>
+              </li>
+            </ul>
+          </div>
+          <div class="col-md-7 col-lg-5 pt-2 text-end">
+            <p>
+              Copyright ©2O22 ALL right reserved by :
+              <a
+                href="https://www.instagram.com/agungk98/"
+                class="fw-bold"
+                style="text-decoration: none"
+                >@nozero</a
+              >
+            </p>
+          </div>
+        </div>
+      </div>
+    </footer>
 
-<!-- footer -->
-<footer class="bg-dark text-white pt-5 pb-3">
-  <div class="container text-md-left">
-    <div class="row text-md-left">
-      <div class="col-lg-6 col-xl-3 mx-auto mt-3">
-        <h5 class="mb-4 fw-bold text-primary">
-          <img src="images/logo.png" style="width: 49px; height:49px;" alt="">
-          PONPES AL-HIDAYAH
-        </h5>
-        <P>Lorem ipsum dolor sit amet consec
-          tetur adipisicing elit. Consectetur necessitatibus natus nisi earum maiores nulla.
-        </P>
-      </div>
-      <div class="col-lg-2 mx-auto mt-3">
-        <h5 class="text-uppercase mb-4 fw-bold text-primary">
-          Contact us
-        </h5>
-        <p>
-          <a href="" class="footer-link text-white" style="text-decoration:none;">home</a>
-        </p>
-        <p>
-          <a href="" class="footer-link text-white" style="text-decoration:none;">Administrasi</a>
-        </p>
-        <p>
-          <a href="" class="footer-link text-white" style="text-decoration:none;">Informasi</a>
-        </p>
-        <p>
-          <a href="" class="footer-link text-white" style="text-decoration:none;">Galeri</a>
-        </p>
-      </div>
-      <div class="col-lg-4 mx-auto mt-3">
-        <h5 class="text-uppercase mb-4 fw-bold text-primary">
-          Contact
-        </h5>
-        <p>
-            <a href="" class="footer-link" style="text-decoration: none;"><i class="fa-solid fa-map-location-dot"></i> Ciakar, Panongan Tangerang 1571O</a>
-        </p>
-        <p>
-          <a href="" class="footer-link" style="text-decoration: none;"><i class="fa-solid fa-envelope"></i> alhidayahpanongan@gmail.com</a>
-        </p>
-        <p>
-          <a href="https://api.whatsapp.com/send?phone=62895630388324" class="footer-link" style="text-decoration: none;"><i class="fa-solid fa-phone"></i> +62 895630388324</a>
-        </p>
-      </div>
-    </div>
-    <hr class="mb-3">
-    <div class="row text-white">
-      <div class="col-md-5 col-lg-7">
-        <ul class="list-unstyled list-inline">
-          <li class="list-inline-item">
-            <a href="https://www.instagram.com/alhidayah_cipari/" class="footer-link" style="font-size: 25px ;"><i class="fa-brands fa-instagram"></i></a>
-          </li>
-          <li class="list-inline-item">
-            <a href="https://web.facebook.com/Alhidayah.knowledge" class="footer-link" style="font-size: 25px;"><i class="fa-brands fa-facebook"></i></a>
-          </li>
-          <li class="list-inline-item">
-            <a href="" class="footer-link" style="font-size: 25px;"><i class="fa-brands fa-youtube"></i></a>
-          </li>
-        </ul>
-      </div>
-      <div class="col-md-7 col-lg-5 pt-2 text-end">
-        <p>Copyright ©2O22 ALL right reserved by :
-          <a href="https://www.instagram.com/agungk98/" class="fw-bold" style="text-decoration: none;">@nozero</a>
-        </p>
-      </div>
-    </div>
-  </div>
-</footer>
+    <!-- endfooter -->
 
-<!-- endfooter -->
-  
-<script src="libraries/Bootstrap/js/bootstrap.bundle.min.js"></script>
-</body>
+    <script src="libraries/Bootstrap/js/bootstrap.bundle.min.js"></script>
+  </body>
 </html>
